packages/taquito-michel-codec/test/contracts_010/ill_typed/stack_bottom_unpopable.tz
parameter unit;
storage unit;
code {
       DROP ;
       DUP ;
       DROP ;
       PUSH unit Unit ;
       NIL operation ;
       PAIR
     }
